<resources>
    <string name="app_name">Pushkin\'s poems app</string>
    <string name="Prisoner">Узник</string>
    <string name="PrisonerText">Сижу за решеткой в темнице сырой.\n
Вскормленный в неволе орел молодой,\n
Мой грустный товарищ, махая крылом,\n
Кровавую пищу клюет под окном,\n
\n
Клюет, и бросает, и смотрит в окно,\n
Как будто со мною задумал одно;\n
Зовет меня взглядом и криком своим\n
И вымолвить хочет: «Давай улетим!\n
\n
Мы вольные птицы; пора, брат, пора!\n
Туда, где за тучей белеет гора,\n
Туда, где синеют морские края,\n
Туда, где гуляем лишь ветер… да я!..»</string>

    <string name="Cloud">Туча</string>
    <string name="CloudText">Последняя туча рассеянной бури!\n
Одна ты несешься по ясной лазури,\n
Одна ты наводишь унылую тень,\n
Одна ты печалишь ликующий день.\n
Ты небо недавно кругом облегала,\n
И молния грозно тебя обвивала;\n
И ты издавала таинственный гром\n
И алчную землю поила дождем.\n
Довольно, сокройся! Пора миновалась,\n
Земля освежилась, и буря промчалась,\n
И ветер, лаская листочки древес,\n
Тебя с успокоенных гонит небес.</string>

    <string name="I_myself_am_not_happy">Сон</string>
    <string name="I_myself_am_not_happyText">Я сам не рад болтливости своей,\n
Но детских лет люблю воспоминанье.\n
Ах! умолчу ль о мамушке моей,\n
О прелести таинственных ночей,\n
Когда в чепце, в старинном одеянье,\n
Она, духов молитвой уклони,\n
С усердием перекрестит меня\n
И шепотом рассказывать мне станет\n
О мертвецах, о подвигах Бовы…\n
От ужаса не шелохнусь, бывало,\n
Едва дыша, прижмусь под одеяло,\n
Не чувствуя ни ног, ни головы.</string>

    <string name="Tidier_fashion_flooring">Опрятней модного..</string>
    <string name="Tidier_fashion_flooringText">Опрятней модного паркета\n
 Блистает речка, льдом одета.\n
 Мальчишек радостный народ\n
Коньками звучно режет лед;\n
На красных лапках гусь тяжелый,\n
 Задумав плыть по лону вод,\n
 Ступает бережно на лед,\n
 Скользит и падает; веселый\n
 Мелькает, вьется первый снег,\n
 Звездами падая на брег.</string>

    <string name="The_bird_of_God_does_not_know">Птичка</string>
    <string name="The_bird_of_God_does_not_knowText">Птичка божия не знает\n
Ни заботы, ни труда;\n
Хлопотливо не свивает\n
Долговечного гнезда;\n
        \n
В долгу ночь на ветке дремлет;\n
Солнце красное взойдет:\n
Птичка гласу бога внемлет,\n
Встрепенется и поет.\n
        \n
За весной, красой природы,\n
Лето знойное пройдет —\n
И туман и непогоды\n
Осень поздняя несет:\n
        \n
Людям скучно, людям горе;\n
Птичка в дальные страны,\n
В теплый край, за сине море\n
Улетает до весны.</string>


    <string name="Eugene_Onegin">Евгений Онегин</string>
    <string name="Eugene_OneginText">В тот год осенняя погода\n
Стояла долго на дворе,\n
Зимы ждала, ждала природа.\n
Снег выпал только в январе\n
На третье в ночь. Проснувшись рано,\n
В окно увидела Татьяна\n
Поутру побелевший двор,\n
Куртины, кровли и забор,\n
На стеклах легкие узоры,\n
Деревья в зимнем серебре,\n
Сорок веселых на дворе\n
И мягко устланные горы\n
Зимы блистательным ковром.\n
Все ярко, все бело кругом.</string>


    <string name="autumn">Осень</string>
    <string name="autumnText">Октябрь уж наступил — уж роща отряхает\n
Последние листы с нагих своих ветвей;\n
Дохнул осенний хлад — дорога промерзает,\n
Журча еще бежит за мельницу ручей,\n
Но пруд уже застыл; сосед мой поспешает\n
В отъезжие поля с охотою своей,\n
И страждут озими от бешеной забавы,\n
И будит лай собак уснувшие дубравы.\n
\n
II\n
Теперь моя пора: я не люблю весны;\n
Скучна мне оттепель;\n
вонь, грязь — весной я болен;\n
Кровь бродит; чувства, ум тоскою стеснены.\n
Суровою зимой я более доволен,\n
Люблю ее снега; в присутствии луны\n
Как легкий бег саней с подругой быстр и волен,\n
Когда под соболем, согрета и свежа,\n
Она вам руку жмет, пылая и дрожа!\n
\n
III\n
Как весело, обув железом острым ноги,\n
Скользить по зеркалу стоячих, ровных рек!\n
А зимних праздников блестящие тревоги?..\n
Но надо знать и честь; полгода снег да снег,\n
Ведь это наконец и жителю берлоги,\n
Медведю, надоест. Нельзя же целый век\n
Кататься нам в санях с Армидами младыми\n
Иль киснуть у печей за стеклами двойными.\n
\n
IV\n
Ох, лето красное! любил бы я тебя,\n
Когда б не зной, да пыль, да комары, да мухи.\n
Ты, все душевные способности губя,\n
Нас мучишь; как поля, мы страждем от засухи;\n
Лишь как бы напоить да освежить себя —\n
Иной в нас мысли нет, и жаль зимы старухи,\n
И, проводив ее блинами и вином,\n
Поминки ей творим мороженым и льдом,\n
\n
V\n
Дни поздней осени бранят обыкновенно,\n
Но мне она мила, читатель дорогой\n
Красою тихою, блистающей смиренно.\n
Так нелюбимое дитя в семье родной\n
К себе меня влечет. Сказать вам откровенно,\n
Из годовых времен я рад лишь ей одной,\n
В ней много доброго; любовник не тщеславный,\n
Я нечто в ней нашел мечтою своенравной.\n
\n
VI\n
Как это объяснить? Мне нравится она,\n
Как, вероятно, вам чахоточная дева\n
Порою нравится. На смерть осуждена,\n
Бедняжка клонится без ропота, без гнева.\n
Улыбка на устах увянувших видна;\n
Могильной пропасти она не слышит зева;\n
Играет на лице еще багровый цвет.\n
Она жива еще сегодня, завтра нет.\n
\n
VII\n
Унылая пора! Очей очарованье!\n
Приятна мне твоя прощальная краса —\n
Люблю я пышное природы увяданье,\n
В багрец и в золото одетые леса,\n
В их сенях ветра шум и свежее дыханье,\n
И мглой волнистою покрыты небеса,\n
И редкий солнца луч, и первые морозы,\n
И отдаленные седой зимы угрозы.\n
\n
VIII\n
И с каждой осенью я расцветаю вновь;\n
Здоровью моему полезен русский холод;\n
К привычкам бытия вновь чувствую любовь;\n
Чредой слетает сон, чредой находит голод;\n
Легко и радостно играет в сердце кровь,\n
Желания кипят — я снова счастлив, молод,\n
Я снова жизни полн — таков мой организм\n
(Извольте мне простить ненужный прозаизм).\n
\n
IX\n
Ведут ко мне коня; в раздолии открытом,\n
Махая гривою, он всадника несет,\n
И звонко под его блистающим копытом\n
Звенит промерзлый дол и трескается лед.\n
Но гаснет краткий день, и в камельке забытом\n
Огонь опять горит — то яркий свет лиет,\n
То тлеет медленно — а я пред ним читаю\n
Иль думы долгие в душе моей питаю.\n
\n
X\n
И забываю мир — и в сладкой тишине\n
Я сладко усыплен моим воображеньем,\n
И пробуждается поэзия во мне:\n
Душа стесняется лирическим волненьем,\n
Трепещет и звучит, и ищет, как во сне,\n
Излиться наконец свободным проявленьем —\n
И тут ко мне идет незримый рой гостей,\n
Знакомцы давние, плоды мечты моей.\n
\n
XI\n
И мысли в голове волнуются в отваге,\n
И рифмы легкие навстречу им бегут,\n
И пальцы просятся к перу, перо к бумаге,\n
Минута — и стихи свободно потекут.\n
Так дремлет недвижим корабль в недвижной влаге,\n
Но чу! — матросы вдруг кидаются, ползут\n
Вверх, вниз — и паруса надулись, ветра полны;\n
Громада двинулась и рассекает волны.\n
\n
XII\n
Плывет. Куда ж нам плыть?. . . . . . . .</string>


    <string name="Winter">Зима!</string>
    <string name="WinterText">Зима!.. Крестьянин, торжествуя,\n
На дровнях обновляет путь;\n
Его лошадка, снег почуя,\n
Плетется рысью как-нибудь;\n
Бразды пушистые взрывая,\n
Летит кибитка удалая;\n
Ямщик сидит на облучке\n
В тулупе, в красном кушаке.\n
Вот бегает дворовый мальчик,\n
В салазки жучку посадив,\n
Себя в коня преобразив;\n
Шалун уж заморозил пальчик:\n
Ему и больно и смешно,\n
А мать грозит ему в окно…
</string>

    <string name="ifTitle">Если...</string>
    <string name="ifText">Если ехать вам случится\n
От Тригорского на Псков,\n
Там, где Л. струится\n
Меж отлогих берегов,—\n
От большой дороги справа,\n
Между полем и селом,\n
Вам представится дубрава,\n
Слева сад и барский дом.\n
Летом, в час, как за холмами\n
Утопает солнца шар,\n
Дом облит его лучами,\n
Окна блещут, как пожар,\n
И, ездой скучая, мимо\n
. . . . . . . . развлечен,\n
Путник смотрит невидимо\n
На семейство, на балкон.\n

</string>

    <string name="SignsTitle">Приметы</string>
    <string name="SignsText">Я ехал к вам: живые сны\n
За мной вились толпой игривой,\n
И месяц с правой стороны\n
Сопровождал мой бег ретивый.\n
\n
Я ехал прочь: иные сны…\n
Душе влюбленной грустно было,\n
И месяц с левой стороны\n
Сопровождал меня уныло.\n
\n
Мечтаныо вечному в тиши\n
Так предаемся мы, поэты;\n
Так суеверные приметы\n
Согласны с чувствами души.</string>


    <string name="AnswerTitle">Ответ</string>
    <string name="AnswerText">Я вас узнал, о мой оракул,\n
Не по узорной пестроте\n
Сих неподписанных каракул,\n
Но по веселой остроте,\n
Но по приветствиям лукавым,\n
Но по насмешливости злой\n
И по упрекам… столь неправым,\n
И этой прелести живой.\n
С тоской невольной, с восхищеньем\n
Я перечитываю вас\n
И восклицаю с нетерпеньем:\n
Пора! в Москву! в Москву сейчас!\n
Здесь город чопорный; унылый,\n
Здесь речи — лед, сердца — гранит;\n
Здесь нет пи ветрености милой,\n
Ни муз, ни Пресни1 ни харит.</string>


    <string name="When_in_my_armsTitle">Когда…</string>
    <string name="When_in_my_armsText">Когда в объятия мои\n
Твой стройный стан я заключаю\n
И речи нежные любви\n
Тебе с восторгом расточаю,\n
Безмолвна, от стесненных рук\n
Освобождая стан свой гибкой,\n
Ты отвечаешь, милый друг,\n
Мне недоверчивой улыбкой;\n
Прилежно в памяти храня\n
Измен печальные преданья,\n
Ты без участья и вниманья\n
Уныло слушаешь меня…\n
Кляну коварные старанья\n
Преступной юности моей\n
И встреч условных ожиданья\n
В садах, в безмолвии ночей.\n
Кляну речей любовный шепот,\n
Стихов таинственный напев,\n
И ласки легковерных дев,\n
И слезы их, и поздний ропот.</string>

    <string name="Pushkin_TextView">Пушкин Александр Сергеевич!</string>
    <string name="go_to">поехли</string>
    <string name="short_poems">Короткие стихи</string>
    <string name="foto_pushkin">фото_пушкина</string>
    <string name="title_menu1_example_menu">Меню1</string>
    <string name="title_menu1_example_menu_two">Меню1</string>
    <string name="fotoPush">фотопушкина</string>
    <string name="fotosleep">fotoSleep</string>
    <string name="o_proizvedenii_free">о произведении</string>
    <string name="o_proizvedenii_five">О произведении</string>

</resources>
