<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/foto_pushkin"
            android:background="@color/colortext2"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp" />

        <TextView
            style="@style/StyleTextVerseTitle"
            android:text="@string/Tidier_fashion_flooring" />

        <TextView
            style="@style/StyleTextVerse"
            android:text="@string/Tidier_fashion_flooringText" />

    </LinearLayout>

</RelativeLayout>