<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/tomswallpapers"
                android:contentDescription="@string/foto_pushkin" />

            <TextView
                style="@style/StyleTextVerseTitle"
                android:text="@string/autumn" />

            <TextView
                style="@style/StyleTextVerse"
                android:text="@string/autumnText" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>